# ericw-tools

./: .astylerc  .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Makefile  README.md  README.txt  appveyor.yml  build-appveyor.ps1  build-linux-64.sh  build-linux.sh  build-osx.sh  build-win32.ps  build-win32.ps1  build-windows-64.ps1  build-windows.ps1  changelog.md  changelog.txt  index.html  index.md  light.txt  params.json  qbsp.txt  testmaps.hh.in  time_compilation.sh  tyrlite.txt  vcpkg.json  vis.txt
.github/workflows/: cmake.yml  continuous-building.yml
bspinfo/: CMakeLists.txt  bspinfo.c  bspinfo.cc  main.cc
bsputil/: CMakeLists.txt  bsputil.c  bsputil.cc  decompile.cpp  decompile.h  main.cc
cmake/: FindSphinx.cmake  ubuntu-mingw-cross.cmake
common/: CMakeLists.txt  bspfile.c  bspfile.cc  bspfile_common.cc  bspfile_generic.cc  bspfile_q1.cc  bspfile_q2.cc  bspfile_sin.cc  bspinfo.cc  bsputils.cc  bspxfile.cc  cmdlib.c  cmdlib.cc  debugger.natvis  decompile.cc  entdata.cc  fs.cc  imglib.cc  lbmlib.c  lbmlib.cc  lightgrid.cc  litfile.cc  log.c  log.cc  mapfile.cc  mathlib.c  mathlib.cc  mesh.cc  parser.cc  polylib.c  polylib.cc  prtfile.cc  qvec.cc  scriplib.c  scriplib.cc  settings.cc  test.cc  threads.c  threads.cc  trilib.c  (+1 more)
doc/: bspinfo.html  bsputil.html  light.html  qbsp.html  vis.html
docs/: .gitignore  CMakeLists.txt  README.md  bspinfo.rst  bsputil.rst  bspx.rst  changelog.rst  conf.py  ericw-tools.py  index.rst  light.rst  lightpreview.rst  maputil.rst  qbsp.rst  requirements.in  requirements.txt  vis.rst
include/bsputil/: bsputil.hh
include/common/: aabb.hh  aligned_allocator.hh  bitflags.hh  bspfile.h  bspfile.hh  bspfile_common.hh  bspfile_generic.hh  bspfile_q1.hh  bspfile_q2.hh  bspfile_sin.hh  bspinfo.hh  bsputils.h  bsputils.hh  bspxfile.hh  cmdlib.h  cmdlib.hh  color.hh  decompile.hh  entdata.h  fs.hh  imglib.hh  iterators.hh  json.hh  lbmlib.h  lbmlib.hh  lightgrid.hh  litfile.hh  log.h  log.hh  mapfile.hh  mathlib.h  mathlib.hh  mesh.hh  numeric_cast.hh  octree.hh  ostream.hh  parallel.hh  parser.hh  polylib.h  polylib.hh  (+10 more)
include/light/: bounce.hh  entities.h  entities.hh  imglib.hh  light.h  light.hh  light2.hh  lightgrid.hh  litfile.h  litfile.hh  ltface.hh  ltface2.hh  phong.hh  settings.hh  spatialindex.hh  surflight.hh  threads.h  trace.hh  trace_embree.hh  write.hh
include/maputil/: maputil.hh
include/qbsp/: brush.hh  brushbsp.hh  bspfile.hh  cmdlib.hh  csg.hh  csg4.hh  exportobj.hh  faces.hh  file.hh  map.hh  mathlib.hh  merge.hh  outside.hh  parser.hh  portals.hh  prtfile.hh  qbsp.hh  region.hh  solidbsp.hh  surfaces.hh  tjunc.hh  tree.hh  util.hh  wad.hh  warnerr.hh  winding.hh  writebsp.hh
include/vis/: leafbits.h  leafbits.hh  vis.h  vis.hh
light/: CMakeLists.txt  bounce.cc  entities.c  entities.cc  imglib.cc  light.c  light.cc  light2.cc  lightgrid.cc  litfile.c  litfile.cc  ltface.c  ltface.cc  ltface2.cc  main.cc  phong.cc  settings.cc  spatialindex.cc  surflight.cc  test.cc  test_common.cc  test_entities.cc  test_light.cc  test_ltface.cc  threads.c  trace.c  trace.cc  trace_embree.cc  write.cc
lightpreview/: CMakeLists.txt  face.cpp  face.h  glview.cpp  glview.h  lightpreview.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stats.cpp  stats.h
man/: CMakeLists.txt  bspinfo.1  bsputil.1  light.1  qbsp.1  vis.1
maputil/: CMakeLists.txt  main.cc  maputil.cc
patches/: embree2.10.0.patch
qbsp/: CMakeLists.txt  brush.c  brush.cc  brushbsp.cc  bspfile.c  bspfile.cc  bspfile.h  cmdlib.c  cmdlib.cc  csg.cc  csg4.c  csg4.cc  exportobj.c  exportobj.cc  faces.cc  file.c  file.cc  file.cpp  file.h  file.hh  globals.c  globals.cc  main.cc  map.c  map.cc  mathlib.c  mathlib.cc  merge.c  merge.cc  outside.c  outside.cc  parser.c  parser.cc  parser.cpp  parser.h  portals.c  portals.cc  prtfile.cc  qbsp.c  qbsp.cc  (+24 more)
qbsp3/: CMakeLists.txt  brushbsp.cc  csg.cc  faces.c  faces.cc  gldraw.cc  glfile.cc  map.c  map.cc  nodraw.cc  portals.c  portals.cc  prtfile.c  prtfile.cc  qbsp.h  qbsp3.c  qbsp3.cc  textures.c  tree.cc  writebsp.c  writebsp.cc
qbsp3/common/: bspfile.c  bspfile.cc  bspfile.h  cmdlib.cc  cmdlib.h  polylib.cc  qfiles.h  threads.c
test/: phongtest3.map
testbsps/: q1_decompiler_test.bsp  q1_decompiler_test.map
testmaps/: E1M1-edited-ents.map  alignment.map  automatated_tests.sh  base1-test.map  base1leak.map  bouncecolorscaletest.map  calcpointstest.map  detailwall.map  dirttest.map  dirttest2.map  falloff.map  glasstest.map  h2_skip_only.map  hl_basic.map  hl_currents.map  hl_light_black.map  hl_liquids.map  invalid_texture_axes.map  light_general.map  light_near_wall.map  light_q2_emissive_cube.map  light_q2_translucent_shadow.map  lightstest1.map  make_screenshot.sh  make_screenshots.sh  offgrid_after.map  phongtest.map  phongtest2.map  q1_bmodel_liquid.map  q1_clip_and_solid_func_wall.map  q1_clip_func_wall.map  q1_csg_detail_fence_detail_wall.map  q1_csg_sky_detail_covering.map  q1_csg_solid_eats_water.map  q1_csg_structural_detail.map  q1_csg_structural_detail_covering.map  q1_csg_water_eats_water.map  q1_cube_case_insensitive.map  q1_cubes.map  q1_cwd_relative_wad.map  (+200 more)
testmaps/compiled/: README.md  q1_cube.bsp  q1_detail_fence2.bsp
testmaps/deprecated/: badoffset.map  badshearrotate.map  badshearscale.map  csg_fail.map  csg_fail.txt  fence.wad  h2rotate.map  hintskip.wad  hlwad.wad  lightstest1.map  missing_face_simple.map  nobounce.map  offgrid_before.map  origin.wad  phongtest.map  qbsp_faces.map  shadowself_shadow.map  stairsteptest.map  suntest.map  swtest.map  test.sh  test_face_splits.map  test_tjunc01.map  testphongtjunc.map  (+3 more)
tests/: CMakeLists.txt  benchmark.cc  test.cc  test_bsputil.cc  test_common.cc  test_entities.cc  test_light.cc  test_ltface.cc  test_main.cc  test_main.hh  test_maputil.cc  test_qbsp.cc  test_qbsp.hh  test_qbsp_q2.cc  test_settings.cc  test_spatialindex.cpp  test_vis.cc  testutils.hh
vis/: CMakeLists.txt  flow.c  flow.cc  main.cc  soundpvs.c  soundpvs.cc  state.c  state.cc  test_vis.cc  vis.c  vis.cc
(+71 files in other folders)
